# codex-telegram-plugin

./: .env.example  .gitignore  Makefile  README.md
.agents/plugins/: marketplace.json
.codex-plugin/: plugin.json
mcp_server/: pyproject.toml
mcp_server/src/codex_telegram/: session_store.py
mcp_server/tests/: test_cli.py  test_destructive_tools.py  test_extras.py  test_helpers.py  test_safety.py  test_session_store.py
plugin/: .mcp.json  README.md
plugin/.codex-plugin/: plugin.json
plugin/mcp_server/tests/: test_cli.py  test_contacts_phone.py  test_login_redaction.py  test_resolve_entity.py  test_upload_path.py
plugin/skills/telegram-manage-groups/: SKILL.md
plugin/skills/telegram-search/: SKILL.md
skills/telegram-login/: SKILL.md
skills/telegram-send/: SKILL.md
skills/telegram-summarize/: SKILL.md
telegram/.codex-plugin/: plugin.json
telegram/mcp_server/: pyproject.toml
telegram/mcp_server/src/codex_telegram/: __main__.py  cache.py  client.py  helpers.py  safety.py  server.py  session_store.py
telegram/mcp_server/src/codex_telegram/tools/: __init__.py  account.py  cache.py  contacts.py  dialogs.py  groups.py  messages.py
telegram/mcp_server/tests/: test_cache.py  test_client.py  test_delete_chat.py  test_helpers.py  test_messages_tools.py  test_resolve_entity.py
telegram/skills/telegram-aggregate/: SKILL.md
telegram/skills/telegram-login/: SKILL.md
telegram/skills/telegram-media-inspect/: SKILL.md
telegram/skills/telegram-search/: SKILL.md
telegram/skills/telegram-summarize/: SKILL.md
(+15 files in other folders)
