[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codex-telegram"
version = "0.1.0"
description = "Telethon-powered Telegram MCP server bundled as a Codex plugin."
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Brian Chew" }
]
dependencies = [
  "cryptography>=44.0.0",
  "keyring>=25.6.0",
  "mcp[cli]>=1.12.0",
  "telethon>=1.43.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0"
]

[project.scripts]
codex-telegram = "codex_telegram.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/codex_telegram"]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
pythonpath = ["src"]
